<resources>
    <string name="app_name">智慧警务保障系统</string>
    <string name="logistics">后勤</string>
    <string name="mine">我的</string>
    <string name="code">一码通</string>
    <string name="code_null"> </string>
    <string name="login_title">智慧警务保障系统</string>
    <string name="reserve_details">预约详情</string>
    <string name="residue">剩余：</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="reserve">预约</string>
    <string name="select_date">选择日期</string>
    <string name="select_time">选择时间段</string>
    <string name="select_reserve_time">选择预约时间</string>
    <string name="name">姓名</string>
    <string name="phone">手机号</string>
    <string name="sure">确定</string>
    <string name="please_fill_in_your_real_name">请填写你的真实姓名</string>
    <string name="please_fill_in_your_phone">请填写你的手机号</string>
    <string name="suggestion_box">意见箱</string>
    <string name="select_all">全选</string>
</resources>