<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_input"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_96"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@drawable/sel_border_white_stroke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/view_line"
                style="@style/style_line_horizontal"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_name"
                style="@style/style_font_black"
                android:layout_marginStart="@dimen/dp_16"
                android:text="@string/name"
                app:layout_constraintBottom_toBottomOf="@id/view_line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_user_name"
                style="@style/style_font_black"
                android:layout_marginStart="@dimen/dp_60"
                android:layout_marginEnd="@dimen/dp_40"
                tools:text="张三"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintBottom_toBottomOf="@id/view_line"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_phone"
                style="@style/style_font_black"
                android:layout_marginStart="@dimen/dp_16"
                android:text="@string/phone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@id/view_line"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_user_phone"
                style="@style/style_font_black"
                android:layout_marginStart="@dimen/dp_60"
                tools:text="1527781235"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@id/view_line"
                app:layout_constraintStart_toStartOf="@id/tv_phone" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_224"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/color_white"
            app:layout_constraintTop_toBottomOf="@id/cl_input">

            <TextView
                android:id="@+id/tv_date_hint"
                style="@style/style_font_black_big"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/select_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_date"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_62"
                android:layout_marginTop="@dimen/dp_16"
                android:overScrollMode="never"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingStart="@dimen/dp_13"
                android:paddingEnd="@dimen/dp_13"
                app:layout_constraintTop_toBottomOf="@id/tv_date_hint" />


            <TextView
                android:id="@+id/tv_time_hint"
                style="@style/style_font_black_big"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/select_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_date"

                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_time"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp_10"
                android:overScrollMode="never"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingStart="@dimen/dp_15"
                android:paddingEnd="@dimen/dp_15"
                app:layout_constraintTop_toBottomOf="@id/tv_time_hint" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_resource"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_144"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_date" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reserve"
            style="@style/style_common_btn"
            android:text="@string/reserve"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_resource"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>