<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_66"
        android:background="@color/color_white"
        app:layout_constraintTop_toTopOf="parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_head"
            android:layout_width="@dimen/dp_46"
            android:layout_height="@dimen/dp_46"
            android:layout_marginStart="@dimen/dp_30"
            android:scaleType="centerCrop"
            android:src="@drawable/svg_default_head"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_oval="true" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/style_font_black_big"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/placeholder"
            app:layout_constraintStart_toEndOf="@id/iv_head"
            app:layout_constraintTop_toTopOf="@id/iv_head" />

        <TextView
            android:id="@+id/tv_desc"
            style="@style/style_font_gray_small"
            android:text="@string/placeholder"
            app:layout_constraintBottom_toBottomOf="@id/iv_head"
            app:layout_constraintStart_toStartOf="@id/tv_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_date"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_224"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/color_white"
        app:layout_constraintTop_toBottomOf="@id/cl_info">

        <TextView
            android:id="@+id/tv_date_hint"
            style="@style/style_font_black_big"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/select_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_62"
            android:paddingStart="@dimen/dp_13"
            android:layout_marginTop="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_13"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date_hint" />


        <TextView
            android:id="@+id/tv_time_hint"
            style="@style/style_font_black_big"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/select_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_date"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_time"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_10"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="@dimen/dp_15"
            android:paddingEnd="@dimen/dp_15"
            app:layout_constraintTop_toBottomOf="@id/tv_time_hint" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_haircut_type"
        style="@style/haircut_agency_haircut_layout"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@id/cl_date"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            style="@style/style_font_agency_medium_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="选择项目" />

        <TextView
            android:id="@+id/tv_haircut"
            style="@style/style_font_black"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_35"
            android:layout_marginStart="@dimen/dp_120"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/sel_audit_button_border_checked"
            android:textColor="@color/fun_FFFFFF"
            android:gravity="center"
            android:text="理发" />

        <TextView
            android:id="@+id/tv_hair_color"
            style="@style/style_font_black"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_35"
            android:background="@drawable/sel_audit_button_border"
            android:gravity="center"
            android:text="染发"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_200"/>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_record"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_144"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_haircut_type" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sure"
        style="@style/style_common_btn"
        android:text="@string/reserve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>